Add README documentation, rename 'title' field to 'customer', and update templates for sales management

--- a/sdp_project/templates/core/about.html
+++ b/sdp_project/templates/core/about.html
@@ -5,7 +5,7 @@
   <div class="bg-light rounded-top rounded-bottom border ">
     <div class="d-flex align-items-end rounded-top" 
       style="
-          background-image: url('{% static "images/about-us.avif" %}'); 
+          background-image: url('{% static "images/about-us.jpg" %}'); 
           background-size: cover; 
           background-position: center; 
           padding: 20px; 
