--- a/sdp_project/templates/core/about.html
+++ b/sdp_project/templates/core/about.html
@@ -2,46 +2,52 @@
 {% load static %}
 {% block title %}About Us{% endblock %}
 {% block content %}
-  <div class="bg-light rounded-top rounded-bottom border ">
-    <div class="d-flex align-items-end rounded-top" 
+  <div class="bg-dark text-light rounded border">
+    <!-- Hero Section -->
+    <div 
+      class="d-flex align-items-end rounded-top text-white" 
       style="
-          background-image: url('{% static "images/about-us.jpg" %}'); 
-          background-size: cover; 
-          background-position: center; 
-          padding: 20px; 
-          color: white; 
-          width: 100%;
-          height: 100px;
-        "
+        background-image: url('{% static "images/about-us.jpg" %}');
+        background-size: cover;
+        background-position: center;
+        padding: 20px;
+        height: 150px;
+        background-blend-mode: overlay;
+        background-color: rgba(0, 0, 0, 0.5);
+      "
     >
+      <h1 class="ms-3">About Us</h1>
     </div>
-    <div style="padding-right: 20px; padding-left: 20px; padding-top: 20px; padding-bottom: 20px;".>
-      <h1>About Us</h1>
-        <p>
-          We are a team of dedicated professionals committed to providing the best sales solutions for your business.
-          Our goal is to help you streamline your sales processes and improve your overall efficiency.
-          Welcome to our Sales App! We are dedicated to providing the best solutions for managing your sales and inventory efficiently.
+
+    <!-- Content Section -->
+    <div class="p-4">
+      <p>
+        We are a team of dedicated professionals committed to providing the best sales solutions for your business.
+        Our goal is to help you streamline your sales processes and improve your overall efficiency.
+        Welcome to our Sales App! We are dedicated to providing the best solutions for managing your sales and inventory efficiently.
       </p>
-    <h4>Our Team</h4>
-        <p>
-          Our team is composed of experienced professionals passionate about delivering high-quality software solutions tailored to your needs.
-          We believe in continuous improvement and are always looking for ways to enhance our products and services.
-          We are committed to providing exceptional customer service and support to ensure your success.
-        </p>
-    <h4>Our Mission</h4>
-        <p>
-          Our mission is to empower businesses with tools that simplify sales processes, improve productivity, and drive growth.</p>
-          We strive to create innovative solutions that meet the evolving needs of our customers.
-          We are dedicated to building long-lasting relationships with our clients and partners.
-          We are here to help you succeed in your sales endeavors.
-        </p>
-    <h4>Our Vision</h4> 
-        <p>
-          Our vision is to be a leading provider of sales solutions that transform the way businesses operate.
-          We aim to be at the forefront of technology and innovation in the sales industry.
-          We envision a future where our solutions are an integral part of every successful sales organization.
-        </p>
+
+      <h4>Our Team</h4>
+      <p>
+        Our team is composed of experienced professionals passionate about delivering high-quality software solutions tailored to your needs.
+        We believe in continuous improvement and are always looking for ways to enhance our products and services.
+        We are committed to providing exceptional customer service and support to ensure your success.
+      </p>
+
+      <h4>Our Mission</h4>
+      <p>
+        Our mission is to empower businesses with tools that simplify sales processes, improve productivity, and drive growth.
+        We strive to create innovative solutions that meet the evolving needs of our customers.
+        We are dedicated to building long-lasting relationships with our clients and partners.
+        We are here to help you succeed in your sales endeavors.
+      </p>
+
+      <h4>Our Vision</h4>
+      <p>
+        Our vision is to be a leading provider of sales solutions that transform the way businesses operate.
+        We aim to be at the forefront of technology and innovation in the sales industry.
+        We envision a future where our solutions are an integral part of every successful sales organization.
+      </p>
     </div>
-  </div>
   </div>
 {% endblock %}
